--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </button>
 
                 <ul class="nav nav-pills">
-                        <li role="presentation" class="active"><a href="bootstrap_test.html">About</a></li>
+                        <li role="presentation" class="active"><a href="index.html">About</a></li>
                         <li role="presentation"><a href="bootstrap_test_portfolio.html">Portfolio</a></li>
                         <li role="presentation"><a href="bootstrap_test_contact.html">Contact</a></li>
                       </ul>
