--- a/bootstrap_test_contact.html
+++ b/bootstrap_test_contact.html
@@ -76,7 +76,7 @@
             </button>
 
             <ul class="nav nav-pills">
-                    <li role="presentation" class="active"><a href="bootstrap_test.html">About</a></li>
+                    <li role="presentation" class="active"><a href="index.html">About</a></li>
                     <li role="presentation"><a href="#">Contact</a></li>
                     <li role="presentation"><a href="#">Portfolio</a></li>
                   </ul>
