--- a/bootstrap_test_portfolio.html
+++ b/bootstrap_test_portfolio.html
@@ -46,7 +46,7 @@
             </button>
 
             <ul class="nav nav-pills">
-                    <li role="presentation" class="active"><a href="bootstrap_test.html">About</a></li>
+                    <li role="presentation" class="active"><a href="index.html">About</a></li>
                     <li role="presentation"><a href="bootstrap_test_portfolio.html">Portfolio</a></li>
                     <li role="presentation"><a href="bootstrap_test_contact.html">Contact</a></li>
                   </ul>
