--- a/bootstrap_test_contact.html
+++ b/bootstrap_test_contact.html
@@ -77,8 +77,8 @@
 
             <ul class="nav nav-pills">
                     <li role="presentation" class="active"><a href="index.html">About</a></li>
-                    <li role="presentation"><a href="#">Contact</a></li>
-                    <li role="presentation"><a href="#">Portfolio</a></li>
+                    <li role="presentation"><a href="bootstrap_test_contact.html">Contact</a></li>
+                    <li role="presentation"><a href="bootstrap_test_portfolio.html">Portfolio</a></li>
                   </ul>
     </nav>     
     <section id="contact">
